--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-stackbit-playground",
-    "version": "0.1.15",
+    "version": "0.1.14",
     "engines": {
         "node": ">=14",
         "npm": "~6"
@@ -41,6 +41,7 @@
         "eslint": "^7.29.0",
         "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^8.3.0",
+        "open": "^8.4.0",
         "postcss": "^8.3.5",
         "postcss-import": "^14.0.2",
         "postcss-nested": "^5.0.6",
